# EXOSIMS

./: .coveragerc  .coveralls.yml  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  47UMac_phot.csv  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MCMC test.py  README.md  WFIRST_47UMac.py  WFIRST_47UMac_Contrast.csv  __init__.py  e2eTests.py  ewanYieldUltraMarine.ipynb  exosims-run  histAttempt1.ipynb  histAttempt1.py  kulikprac.py  plotting_AAS.py  pyproject.toml  quickrun2.py  rec_check.py  requirements.txt  ruff.toml  runtests.py  setup.py  setupEXOSIMS.py  test_requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
BackgroundSources/: GalaxiesFaintStars.py
Completeness/: GarrettCompleteness.py
EXOSIMS/: .travis.yml  MissionSim.py  README  SurveySimulation_old.py  TimeKeeping.py  __init__.py  e2eTKTests.py  e2eTests.py  kuliktest.py
ICD/: asme2ej.cls  asmems4.bst  icd.aux  icd.bbl  icd.bib  icd.blg  icd.fdb_latexmk  icd.fls  icd.out  icd.tex  icd.toc
Observatory/: L2_halo_orbit_six_month.mat  WFIRSTObservatory.py  WFIRSTObservatoryL2.py
PlanetPhysicalModel/: FortneyMarleyCahoyMix1.py
PlanetPopulation/: EarthTwinHabZone2.py  KeplerLike1.py
Prototypes/: Completeness.py  OpticalSystem.py  PostProcessing.py  SimulatedUniverse.py  TargetList.py
Scripts/: WFIRST_Nemati_KnownRV.json  sampleScript_coron.json  sampleScript_parallel_ensemble.json  template_WFIRST_EarthTwinHabZone.json
SimulatedUniverse/: KnownRVPlanetsUniverse.py
StarCatalog/: SIMBAD300Catalog.py
SurveySimulation/: KnownRVSurvey.py  linearJScheduler.py  starkAYO.py
ZodiacalLight/: Leinert98_table17.txt  Stark.py
additionalFiles/: ReadMe.txt  acta_dvMapAnalysis.py  acta_msDRO.py  acta_msL1N.py  acta_msL1S.py  acta_msL2N.py  acta_msL2S.py  acta_msSEL2.py  filesLunarSSDRO.txt  filesLunarSSL1N.txt  filesLunarSSL1S.txt  filesLunarSSL2N.txt  filesLunarSSL2S.txt  plotsSotoStarshade.py  plotsSotoStarshadeMoon.py
deprecated_schedulers/: EclipticTargetList.py  ExoC_Scheduler.py  README.md  SS_char_only2.py  SS_det_only.py  linearJScheduler_DDPC_sotoSS.py  tieredScheduler_DD_SS.py  tieredScheduler_SLSQP.py  tieredScheduler_sotoSS.py
documentation/: EXOSIMS.BackgroundSources.rst  EXOSIMS.Completeness.rst  EXOSIMS.Observatory.rst  EXOSIMS.OpticalSystem.rst  EXOSIMS.PlanetPhysicalModel.rst  EXOSIMS.PlanetPopulation.rst  EXOSIMS.PostProcessing.rst  EXOSIMS.Prototypes.rst  EXOSIMS.SimulatedUniverse.rst  EXOSIMS.StarCatalog.rst  EXOSIMS.SurveyEnsemble.rst  EXOSIMS.SurveySimulation.rst  EXOSIMS.TargetList.rst  EXOSIMS.TimeKeeping.rst  EXOSIMS.ZodiacalLight.rst  EXOSIMS.rst  EXOSIMS.util.KeplerSTM_C.rst  EXOSIMS.util.rst  Makefile  arglist.rst  arglistpreamble.txt  backgroundsources.rst  buildargdoc.py  builddocs.bat  builddocs.sh  completeness.rst  concepts.rst  conf.py  devguide.rst  doc_requirements.txt  docs.rst  docstring_example.py  exosimsmods.rst  glossary.rst  icd.rst  index.rst  inputspec.rst  install.rst  installortools.txt  intro.rst  (+21 more)
test-reports/: TEST-tests.BackgroundSources.test_BackgroundSources.TestBackgroundSources-20240612212837.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613191607.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613191619.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613192133.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613192645.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613192747.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613192910.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613193030.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613194151.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613194254.xml  TEST-tests.Completeness.test_BrownvGarrett.TestBrownvGarrett-20240613194902.xml  (+61 more)
(+1818 files in other folders)
