[build-system]
requires = ["setuptools>= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["EXOSIMS*"]
namespaces = false

[project]
name = "EXOSIMS"
dynamic = ["dependencies", "version"]
requires-python = ">= 3.10"
authors = [
  {name = "Dmitry Savransky", email = "ds264@cornell.edu"},
]
maintainers = [
  {name = "Dmitry Savransky", email = "ds264@cornell.edu"}
]
description = "Exoplanet Imaging Mission Simulator"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/dsavransky/EXOSIMS"
Documentation = "https://exosims.readthedocs.io"
Repository = "https://github.com/dsavransky/EXOSIMS"
Issues = "https://github.com/dsavransky/EXOSIMS/issues"

[tool.setuptools.dynamic]
version = {attr = "EXOSIMS.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "run",
    "tests",
    "tools",
    "documentation",
    "deprecated_schedulers",
    "exosims-run",
    "coroOnlyScheduler.py", #temporary
    "linearJScheduler.py",  #temporary
    "linearJScheduler_3DDPC.py", #temporary
    "linearJScheduler_det_only.py", #temporary
    "linearJScheduler_orbitChar.py", #temporary
    "tieredScheduler.py", #temporary
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "D101", "D102", "D103", "D105", "D106", "D207", "D208", "D416", "D417","D419"]
ignore = ["E741", "E731", "E203"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.black]
line-length = 88
force-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/tools/*
  | ^/deprecated_schedulers/*
  | ^/exosims-run
)
'''
